# AI_ICP_Huggingface

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
.cargo/: config.toml
src/icp_huggingface_backend/: Cargo.toml  icp_huggingface__backend.did
src/icp_huggingface_backend/src/: lib.rs  storage.rs
src/icp_huggingface_frontend/: package.json
src/icp_huggingface_frontend/src/: App.jsx
